# manim-tf

./: .gitignore  pyproject.toml
src/manim_tensorflow/: __init__.py  module.py
src/manim_tensorflow/engine/: __init__.py  base_layer.py
src/manim_tensorflow/keras/: sequential.py
src/manim_tensorflow/keras/layers/: dense.py
tests/: test_dense_layer.py  test_sequential_model.py
